--- a/index.html
+++ b/index.html
@@ -143,6 +143,27 @@
             </div>
         </section>
 
+        <section>
+            <div class="sponsors">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="section-para">Proudly sponsored by industry leaders who share our commitment to excellence, innovation, and creating exceptional experiences for our valued patrons</p>
+                <div class="sponsor-img">
+                    <div class="row1">
+                        <img src="images/a.png" alt="">
+                        <img src="images/b.png" alt="">
+                        <img src="images/c.png" alt="">
+                        <img src="images/d.png" alt="">
+                    </div>
+                    <div class="row2">
+                        <img src="images/e.png" alt="">
+                        <img src="images/f.png" alt="">
+                        <img src="images/g.png" alt="">
+                        <img src="images/h.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="news">
             <div class="news-details">
                 <div class="input">
