--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Mulish:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+
 </head>
 <body>
     
@@ -77,34 +80,32 @@
                 <p class="section-para">Discover your next adventure, choose your destination wisely, explore new horizons, and create unforgettable memories.</p>
             </div>
             <div class="country-content">
-                <div class="country-content">
-                    <div class="row">
-                       <div class="one">
-                        <h4 class="center">Maldives</h4>
-                       </div>
-                       <div class="two">
-                        <h4 class="center">Indonesia</h4>
-                       </div>
+                <div class="row">
+                    <div class="one">
+                    <h4 class="center">Maldives</h4>
                     </div>
-                    <div class="row2">
-                       <div class="three">
-                        <h4 class="center">Srilanka</h4>
-                       </div>
-                       <div class="four">
-                        <h4 class="center">North America</h4>
-                       </div>
-                       <div class="five">
-                        <img src="images/c5.png" alt="kashmir">
-                        <h4 class="center">Kashmir</h4>
-                       </div>
+                    <div class="two">
+                    <h4 class="center">Indonesia</h4>
                     </div>
-                    <div class="row3">
-                       <div class="six">
-                        <h4 class="center">Bangladesh</h4>
-                       </div>
-                       <div class="seven">
-                        <h4 class="center">Bandarban</h4>
-                       </div>
+                </div>
+                <div class="row2">
+                    <div class="three">
+                    <h4 class="center">Srilanka</h4>
+                    </div>
+                    <div class="four">
+                    <h4 class="center">North America</h4>
+                    </div>
+                    <div class="five">
+                    <img src="images/c5.png" alt="kashmir">
+                    <h4 class="center">Kashmir</h4>
+                    </div>
+                </div>
+                <div class="row3">
+                    <div class="six">
+                    <h4 class="center">Bangladesh</h4>
+                    </div>
+                    <div class="seven">
+                    <h4 class="center">Bandarban</h4>
                     </div>
                 </div>
             </div>
@@ -142,23 +143,117 @@
             </div>
         </section>
 
-        <section>
-            <div class="sponsors">
-                <h3 class="section-title">Our Sponsors</h3>
-                <p class="section-para">Proudly sponsored by industry leaders who share our commitment to excellence, innovation, and creating exceptional experiences for our valued patrons</p>
-                <div class="sponsor-img">
-                    <div class="row1">
-                        <img src="images/a.png" alt="">
-                        <img src="images/b.png" alt="">
-                        <img src="images/c.png" alt="">
-                        <img src="images/d.png" alt="">
+        <section class="deals">
+            <div class="deals-details">
+                <h3 class="section-title">Deals & Discounts</h3>
+                <p class="section-para">Exclusive offers on premium products, limited-time discounts, and savings that redefine shopping experiences for budget-conscious consumers. Unlock your deals today!</p>
+            </div>
+            <div class="deals-content">
+                <div class="row1">
+                    <div class="box">
+                        <div class="icons">
+                            <div class="six-nine">
+                                <i class="fa-solid fa-clock"></i>
+                                <h6>7 Day / 6 Night</h6>
+                            </div>
+                            <div class="six-nine">
+                                <i class="fa-solid fa-users"></i>
+                                <h6>Max : 10</h6>
+                            </div>
+                            <div class="six-nine">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <h6>Malaysia</h6>
+                            </div>
+                        </div>
+                        <h4 class="section-heading">Tour To Satorini</h4> 
+                        <p class="section-para"> Idyllic retreat with luxurious amenities, breathtaking views, gourmet dining, spa indulgence.</p>
+                        <h5>Price: $1300-$1500</h5>
+                        <button class="btn-primary">Book Now</button>
                     </div>
-                    <div class="row2">
-                        <img src="images/e.png" alt="">
-                        <img src="images/f.png" alt="">
-                        <img src="images/g.png" alt="">
-                        <img src="images/h.png" alt="">
+                </div>
+                <div class="row2">
+                    <div class="box">
+                        <div class="icons">
+                            <div class="six-nine">
+                                <i class="fa-solid fa-clock"></i>
+                                <h6>7 Day / 6 Night</h6>
+                            </div>
+                            <div class="six-nine">
+                                <i class="fa-solid fa-users"></i>
+                                <h6>Max : 12</h6>
+                            </div>
+                            <div class="six-nine">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <h6>Bangladesh</h6>
+                            </div>
+                        </div>
+                        <h4 class="section-heading">Tour To Paradise</h4> 
+                        <p class="section-para">Hotel Paradise offers luxurious accommodations, breathtaking views, world-class amenities, gourmet dining.</p>
+                        <h5>Price: $2100-$3000</h5>
+                        <button class="btn-primary">Book Now</button>
                     </div>
+                </div>
+                <div class="row3">
+                    <div class="box">
+                        <div class="icons">
+                            <div class="six-nine">
+                                <i class="fa-solid fa-clock"></i>
+                                <h6>7 Day / 6 Night</h6>
+                            </div>
+                            <div class="six-nine">
+                                <i class="fa-solid fa-users"></i>
+                                <h6>Max : 8</h6>
+                            </div>
+                            <div class="six-nine">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <h6>Maldives</h6>
+                            </div>
+                        </div>
+                        <h4 class="section-heading">Tour To Holand</h4> 
+                        <p class="section-para">Oceanfront views, luxurious amenities, impeccable service, exquisite dining, spa retreat, vibrant nightlife</p>
+                        <h5>Price: $800-$1000</h5>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+                <div class="deals-btn">
+                    <button class="btn-primary">See All Packages</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="video">
+            <div class="video-details">
+                <h3 class="section-title">A Simple Perfect Place To Get Lost</h3>
+                <p class="section-para">In an enchanted forest, where sunlight filters through lush canopies, each step unveils mysteries. Tranquil streams whisper secrets, and ancient trees beckon with their timeless wisdom.</p>
+                <ul>
+                    <li>Lush canopies, sunlight filtering, and serene streams create a magical, immersive setting.</li>
+                    <li>Ancient trees exude wisdom, inviting contemplation in a serene, enchanted woodland setting.</li>
+                </ul>
+                <button class="btn-primary">See More</button>
+            </div>
+            <div class="video-content">
+                <video poster="./images/bd.jpg" controls>
+                    <source src="/video/bd.mp4">
+                </video>
+                <h4>Watch Our Bangladesh</h4>
+            </div>
+        </section>
+
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="section-para">Proudly sponsored by industry leaders who share our commitment to excellence, innovation, and creating exceptional experiences for our valued patrons</p>
+            <div class="sponsor-img">
+                <div class="row1">
+                    <img src="images/b.png" alt="">
+                    <img src="images/a.png" alt="">
+                    <img src="images/c.png" alt="">
+                    <img src="images/d.png" alt="">
+                </div>
+                <div class="row2">
+                    <img src="images/e.png" alt="">
+                    <img src="images/f.png" alt="">
+                    <img src="images/g.png" alt="">
+                    <img src="images/h.png" alt="">
                 </div>
             </div>
         </section>
