its perfect now

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <button class="btn-primary">Book Now</button>
                     </div>
                 </div>
-                <div class="row3">
+                <div class="row1">
                     <div class="box">
                         <div class="icons">
                             <div class="six-nine">
@@ -233,7 +233,7 @@
             </div>
             <div class="video-content">
                 <video poster="./images/bd.jpg" controls>
-                    <source src="/video/bd.mp4">
+                    <source src="/video/bd.mp4" type="video/mp4">
                 </video>
                 <h4>Watch Our Bangladesh</h4>
             </div>
